Adicao de botao pedido online

--- a/index.html
+++ b/index.html
@@ -39,32 +39,31 @@
         <div class="col-md-6">
             <div class="info">
             <h1> Escolha seu cardápio de hoje!<br>Esta uma delicia!!!</h1>
+                <a href="https://api.whatsapp.com/send?phone=5519992857751&text=Ola%20gostaria%20de%20efetuar%20um%20pedido!"><i class="fa fa-whatsapp"></i>Faça aqui seu pedido</a>
             </div>
         </div>
         </div>
     </div>
     <div class="row">
         <div class="col-md-3 footer-widget">
-        <i class="fa fa-phone"></i>
-        <div class="footer-text">
-            <h6>(19) 3936-2093</h6>
-            <h6>(19) 3392-7649</h6>
-            <h6>(19) 3935-4311</h6>
-            <p>Frangoteria Restaurante</p>
-         </div>
-        </div>
-        <div class="col-md-3 footer-widget">
         <i class="fa fa-map-marker"></i>
         <div class="footer-text">
             <h6>Unidade l</h6>
-            <p>R. Serafim Gilberto Candello, 864 - Jardim Morada do Sol, Indaiatuba - SP, 13346-348</p>
+            <p>R. Serafim Gilberto Candello, 864 - Jardim Morada do Sol, Indaiatuba - SP, 13346-348<br>📞 (19) 3936-2093</p>
          </div>
         </div>
         <div class="col-md-3 footer-widget">
         <i class="fa fa-map-marker"></i>
         <div class="footer-text">
             <h6>Unidade ll</h6>
-            <p>R. Jacob Lyra, 1164 - Jardim Morada do Sol, Indaiatuba - SP, 13346-402</p>
+            <p>R. Jacob Lyra, 1164 - Jardim Morada do Sol, Indaiatuba - SP, 13346-402<br>📞 (19) 3392-7649</p>
+         </div>
+        </div>
+        <div class="col-md-3 footer-widget">
+        <i class="fa fa-map-marker"></i>
+        <div class="footer-text">
+            <h6>Unidade lll</h6>
+            <p>R. Anhangabaú, 280 - JD Paulista, Indaiatuba - SP, 13348-280<br>📞 (19) 3935-4311</p>
          </div>
         </div>
         <div class="col-md-3 footer-widget">
